--- a/styles/style.css
+++ b/styles/style.css
@@ -25,15 +25,60 @@
 
 }
 
+.flex-section{
+    margin-top: 140px;
+}
+
 .flex-container {
-    height: 700px;
+    height: 1000%;
     display: flex;
-    margin-left: 30px;
-    margin-top: 30px;
-    padding: 70px;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+
+@media (max-width: 800px) {
+    .flex-container {
+      flex-direction: column;
+    }
+  }
+
+.flex-item-text > p {
+    margin-top: 25px;
+}
+
+.flex-item-text{
+    width: 50%;
+    padding-left: 30px;
+}
+
+.flex-item-image{
+    width:50%;
+    position: relative;
+    bottom: 150px;
+    left: 20px;
 }
 
 .responsive{
     width:100%;
-    height:auto;  
+    height:inherit; 
+    display: block;
+}
+
+.totw{
+    width: 100%;
+    padding-bottom: 0px;
+}
+
+.totw-text{
+    width: 60%;
+    margin: auto;
+    transform: translateY(280%);
+}
+
+footer{
+    background: black;
+}
+
+footer > p, h1 {
+    color: whitesmoke;
 }
